--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap');
 .head{
 
-    height:max-content;
+    height:100vh;
     position: sticky;
     top: 0px;
     min-width: 300px;
